[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/font_h1.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/art/new_upgrade_icon.tres" type="Texture" id=3]
[ext_resource path="res://score_screen/score_screen.gd" type="Script" id=4]

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_top = 54.0
margin_right = 960.0
margin_bottom = 114.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Expedition %d complete.[/center]"
text = "Expedition %d complete."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -247.0
margin_top = -92.0
margin_right = -117.0
margin_bottom = -52.0
text = "ui_quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRunButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 82.0
margin_top = -92.0
margin_right = 240.0
margin_bottom = -52.0
text = "ui_new_run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 252.0
margin_top = -92.0
margin_right = 398.0
margin_bottom = -52.0
text = "ui_shop_title"

[node name="NewUpgradesIndicator" type="TextureRect" parent="ShopButton"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -11.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewUpgradesTween" type="Tween" parent="ShopButton"]
repeat = true
playback/repeat = true

[node name="ScoreContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -91.0
margin_right = 109.0
margin_bottom = 91.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTreasure" type="RichTextLabel" parent="ScoreContainer"]
margin_right = 218.0
margin_bottom = 37.0
bbcode_enabled = true
bbcode_text = "[center]  %d [img]res://assets/art/treasure_icon.tres[/img][/center]"
text = "  %d "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GainedTreasure" type="RichTextLabel" parent="ScoreContainer"]
margin_top = 41.0
margin_right = 218.0
margin_bottom = 78.0
bbcode_enabled = true
bbcode_text = "[center]+ %d [img]res://assets/art/treasure_icon.tres[/img][/center]"
text = "+ %d "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ScoreContainer"]
margin_top = 82.0
margin_right = 218.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 2 )

[node name="TotalTreasure" type="RichTextLabel" parent="ScoreContainer"]
margin_top = 88.0
margin_right = 218.0
margin_bottom = 125.0
bbcode_enabled = true
bbcode_text = "[center]+ %d [img]res://assets/art/treasure_icon.tres[/img][/center]"
text = "+ %d "
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="NewRunButton" to="." method="_on_NewRunButton_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
